more generic package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "textbooks-for-change",
-  "description": "Textbooks For Change HTML Theme",
+  "name": "pico-grunt-themeing",
+  "description": "pico-grunt-themeing template",
   "version": "1.0.0",
-  "homepage": "http://textbooksforchange.ca",
+  "homepage": "http://ohdoylerules.com",
   "author": {
-    "name": "WARPAINT Media",
-    "email": "hello@warpaintmedia.ca",
-    "url": "http://warpaintmedia.ca/"
+    "name": "James Doyle",
+    "email": "james2doyle@gmail.com",
+    "url": "http://ohdoylerules.com/"
   },
   "licenses": [{
     "type": "MIT",
