--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sass": "*",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-imagemin": "*",
     "grunt-autoprefixer": "~0.3.0"
   }
 }
