--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "devDependencies": {
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-cssmin": "*",
+    "grunt-contrib-uglify": "*",
     "grunt-sass": "*",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-imagemin": "*",
-    "grunt-autoprefixer": "~0.3.0"
+    "grunt-autoprefixer": "~0.3.0",
+    "grunt-browser-sync": "~0.2.6"
   }
 }
